fix: css make map behind

--- a/src/styles/components/Map.scss
+++ b/src/styles/components/Map.scss
@@ -1,11 +1,10 @@
 
 .map {
-  // position: absolute;
-  overflow: hidden;
-  width: 100wh;
+  position: absolute;
+  width: 100%;
   height: 100vh;
   z-index: 0;
-  background-color: pink;
+  top: 0;
 }
 
 .leaflet-container {
